squished a few bugs with selected tool and dropzone

--- a/src/app/tools/basic-tool/basic-tool.component.css
+++ b/src/app/tools/basic-tool/basic-tool.component.css
@@ -41,3 +41,8 @@ label {
 	display:none;
 }
 
+.fileName {
+	font-size:10px;
+	color:#888;
+}
+
